--- a/p/công-cụ-cần-có-của-it/index.html
+++ b/p/công-cụ-cần-có-của-it/index.html
@@ -127,8 +127,11 @@ tar
 </div>
 </a>
 </article>
-<article>
+<article class=has-image>
 <a href=/p/new-update/>
+<div class=article-image>
+<img src=/p/new-update/update.b4b447707a650e952da36d3b54b69526_hu1dd84e989467d0778b9e2239a0d4cd29_55049_250x150_fill_q75_box_smart1.jpg width=250 height=150 loading=lazy data-key data-hash="md5-tLRHcHplDpUto207VLaVJg==">
+</div>
 <div class=article-details>
 <h2 class=article-title>New Update</h2>
 </div>
@@ -141,6 +144,13 @@ tar
 </div>
 <div class=article-details>
 <h2 class=article-title>Learning English</h2>
+</div>
+</a>
+</article>
+<article>
+<a href=/p/cloud-computing/>
+<div class=article-details>
+<h2 class=article-title>Cloud Computing</h2>
 </div>
 </a>
 </article>
